--- a/index.html
+++ b/index.html
@@ -4,72 +4,88 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="assets/css/style.css">
   <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <script src="//code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
   <script src="assets/js/common.js"></script>
-  <title>Document</title>
+  <title>Copilot</title>
 </head>
 <body>
 
-<nav>
-  <ul class="fence">
-    <li class="logo">Copilot</li>
-    <li class="anchor--right">About</li>
-    <li>Pricing</li>
-    <li>Contact</li>
-  </ul>
-</nav>
-
-<div class="hero">
-    <div class="hero__title">
-      <span>Looking for a tech job?</span><br />
-      <span>I can help.</span>
+<div class="section" id="section-1">
+  <div class="section__item hero-1"></div>
+  <div class="section__item soft-quad">
+    <div class="center--vertically">
+      <div class="logo"><i class="fa fa-paper-plane"></i></div>
+      <h2>Looking for a tech job?<br />I can help.</h2>
+      <p class="muted">We’re pretty confident, which is why we only charge you if you land the job.
+Because a co-pilot isn’t worth a damn if he crashes the plane.</p>
+      <div class="button push-triple--top">Learn More</div>
     </div>
+  </div>
 </div>
 
-<div class="highlight fence">
-  <ul class="grid">
-    <li class="grid__cell">
-      <div class="highlight__item">
-        asdfasdf
+<div class="section" id="section-2">
+  <div class="section__item hero-2">
+    <i class="fa fa-check-circle"></i>
+  </div>
+  <div class="section__item soft-quad">
+    <div class="center--vertically">
+      <div class="logo"><i class="fa fa-check"></i></div>
+      <h2>What I do</h2>
+      <p class="muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti rerum, similique porro quod voluptate.</p>
+      <div class="push-triple--top content--narrow">
+        <h3><i class="fa fa-check muted push-half--right"></i> Lift Your Confidence</h3>
+        <p class="muted milli">I’m not just anyone, and neither are you. I’ll show you how you can shine. </p>
       </div>
-    </li>
-    <li class="grid__cell">
-      <div class="highlight__item">
-        asdfasdf
+      <div class="push-triple--top content--narrow">
+        <h3><i class="fa fa-check push-half--right muted"></i> Perfect Your Process</h3>
+        <p class="muted milli">I write your resume. Leverage my network. Coach you on the process.</p>
       </div>
-    </li>
-    <li class="grid__cell">
-      <div class="highlight__item">
-        asdfasdf
+      <div class="push-triple--top content--narrow">
+        <h3><i class="fa fa-check push-half--right muted"></i> Expand Your Thinking</h3>
+        <p class="muted milli">You can do more than you think. So let’s get creative about what you want.</p>
       </div>
-    </li>
-  </ul>
+    </div>
+  </div>
 </div>
 
-
-<div style="background:#f9f9f9; padding: 20px;">asdfa</div>
-
-
-<div class="highlight fence">
-  <ul class="grid">
-    <li class="grid__cell">
-      <div class="highlight__item">
-        asdfasdf
+<div class="section" id="section-3">
+  <div class="section__item stacked  hero-3">
+    <div class="stacked__item" id="olivia"></div>
+    <div class="stacked__item" id="chanti"></div>
+    <div class="stacked__item" id="sarah"></div>
+  </div>
+  <div class="section__item soft-quad">
+    <div class="center--vertically">
+      <div class="logo"><i class="fa fa-quote-left"></i></div>
+      <h2>Testimonials</h2>
+      <p class="muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti rerum, similique porro quod voluptate.</p>
+      <div class="push-triple--top content--narrow">
+        <h3><i class="fa fa-thumbs-up push-half--right muted"></i> Oliva</h3>
+        <p class="muted milli">I write your resume. Leverage my network. Coach you on the process.</p>
       </div>
-    </li>
-    <li class="grid__cell">
-      <div class="highlight__item">
-        asdfasdf
+      <div class="push-triple--top content--narrow">
+        <h3><i class="fa fa-thumbs-up muted push-half--right"></i> Chanti</h3>
+        <p class="muted milli">I’m not just anyone, and neither are you. I’ll show you how you can shine. </p>
       </div>
-    </li>
-    <li class="grid__cell">
-      <div class="highlight__item">
-        asdfasdf
+      <div class="push-triple--top content--narrow">
+        <h3><i class="fa fa-thumbs-up push-half--right muted"></i> Sarah</h3>
+        <p class="muted milli">You can do more than you think. So let’s get creative about what you want.</p>
       </div>
-    </li>
-  </ul>
+    </div>
+  </div>
 </div>
 
+<div class="section" id="section-4">
+  <div class="section__item hero-4"></div>
+  <div class="section__item soft-quad">
+    <div class="center--vertically">
+      <div class="logo"><i class="fa fa-shopping-cart"></i></div>
+      <h2>Pricing</h2>
+      <p class="muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti rerum, similique porro quod voluptate.</p>
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
