--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="initial-scale=1, width=device-width">
   <link rel="stylesheet" href="assets/css/style.css">
   <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -19,7 +20,7 @@
       <h2>Looking for a tech job?<br />I can help.</h2>
       <p class="muted">We’re pretty confident, which is why we only charge you if you land the job.
 Because a co-pilot isn’t worth a damn if he crashes the plane.</p>
-      <div class="button push-triple--top">Learn More</div>
+      <div class="button push-quad--top">Learn More</div>
     </div>
   </div>
 </div>
