--- a/index.html
+++ b/index.html
@@ -12,25 +12,24 @@
 </head>
 <body>
 
-<div class="section" id="section-1">
-  <div class="section__item hero-1"></div>
-  <div class="section__item soft-quad">
-    <div class="center--vertically">
+<section id="section-1">
+  <div class="col col--left"></div>
+  <div class="col col--right">
+    <div class="copy-box">
       <div class="logo"><i class="fa fa-paper-plane"></i></div>
       <h2>Looking for a tech job?<br />I can help.</h2>
-      <p class="muted">We’re pretty confident, which is why we only charge you if you land the job.
-Because a co-pilot isn’t worth a damn if he crashes the plane.</p>
+      <p class="muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis qui doloremque, eos! Delectus iusto fugiat harum sed, corporis quo veniam nihil dolorem nobis? Sequi nulla debitis eum nostrum mollitia dicta.</p>
       <div class="button push-quad--top">Learn More</div>
     </div>
   </div>
-</div>
+</section>
 
-<div class="section" id="section-2">
-  <div class="section__item hero-2">
+<section id="section-2">
+  <div class="col col--left">
     <i class="fa fa-check-circle"></i>
   </div>
-  <div class="section__item soft-quad">
-    <div class="center--vertically">
+  <div class="col col--right">
+    <div class="copy-box">
       <div class="logo"><i class="fa fa-check"></i></div>
       <h2>What I do</h2>
       <p class="muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti rerum, similique porro quod voluptate.</p>
@@ -48,16 +47,16 @@ Because a co-pilot isn’t worth a damn if he crashes the plane.</p>
       </div>
     </div>
   </div>
-</div>
+</section>
 
-<div class="section" id="section-3">
-  <div class="section__item stacked  hero-3">
+<section id="section-3">
+  <div class="col col--left stacked">
     <div class="stacked__item" id="olivia"></div>
     <div class="stacked__item" id="chanti"></div>
     <div class="stacked__item" id="sarah"></div>
   </div>
-  <div class="section__item soft-quad">
-    <div class="center--vertically">
+  <div class="col col--right">
+    <div class="copy-box">
       <div class="logo"><i class="fa fa-quote-left"></i></div>
       <h2>Testimonials</h2>
       <p class="muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti rerum, similique porro quod voluptate.</p>
@@ -75,18 +74,44 @@ Because a co-pilot isn’t worth a damn if he crashes the plane.</p>
       </div>
     </div>
   </div>
-</div>
+</section>
 
-<div class="section" id="section-4">
-  <div class="section__item hero-4"></div>
-  <div class="section__item soft-quad">
-    <div class="center--vertically">
-      <div class="logo"><i class="fa fa-shopping-cart"></i></div>
+<section id="section-4">
+  <div class="col col--left">
+    <i class="fa fa-list"></i>
+  </div>
+  <div class="col col--right">
+    <div class="copy-box">
+      <div class="logo"><i class="fa fa-list"></i></div>
       <h2>Pricing</h2>
       <p class="muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti rerum, similique porro quod voluptate.</p>
+      <div class="push-triple--top content--narrow">
+        <h3><i class="fa fa-check push-half--right muted"></i> Oliva</h3>
+        <p class="muted milli">I write your resume. Leverage my network. Coach you on the process.</p>
+      </div>
+      <div class="push-triple--top content--narrow">
+        <h3><i class="fa fa-check muted push-half--right"></i> Chanti</h3>
+        <p class="muted milli">I’m not just anyone, and neither are you. I’ll show you how you can shine. </p>
+      </div>
+      <div class="push-triple--top content--narrow">
+        <h3><i class="fa fa-check push-half--right muted"></i> Sarah</h3>
+        <p class="muted milli">You can do more than you think. So let’s get creative about what you want.</p>
+      </div>
     </div>
   </div>
-</div>
+</section>
+
+<section id="section-5">
+  <div class="col col--left"></div>
+  <div class="col col--right">
+    <div class="copy-box">
+      <div class="logo"><i class="fa fa-envelope"></i></div>
+      <h2>Contact</h2>
+      <p class="muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti rerum, similique porro quod voluptate.</p>
+      <div class="button push-quad--top">Contact Me</div>
+    </div>
+  </div>
+</section>
 
 </body>
 </html>
