new pictures new people

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 
 <section id="section-3">
   <div class="col col--left stacked">
-    <div class="stacked__item" id="brad"></div>
-    <div class="stacked__item" id="jenny"></div>
+    <div class="stacked__item" id="faith"></div>
     <div class="stacked__item" id="sarah"></div>
+    <div class="stacked__item" id="brad"></div>
   </div>
   <div class="col col--right">
     <div class="copy-box">
@@ -71,15 +71,15 @@
       <h2>Testimonials</h2>
       <p class="muted">Don't take my word for it, take theirs...</p>
       <div class="push-triple--top content--narrow">
+        <h3><i class="fa fa-thumbs-up push-half--right muted"></i> <a href="https://www.linkedin.com/in/faithstorey/">Faith</h3>
+        <p class="muted milli">Jordan is the tool you need to grow into the next level of your career. He has a resume template that has helped me land more interviews and contact with recruiters. If you are looking to get a job in SF, you should take advantage of his advice and years of experience.</p>
+      </div>
+      <div class="push-triple--top content--narrow">
+        <h3><i class="fa fa-thumbs-up muted push-half--right"></i> <a href="https://www.linkedin.com/in/sarah-lubecki-a1a92942/">Sarah</a></h3>
+        <p class="muted milli">Changing careers changed my life, and I have Jordan to thank for helping me get a job that I truly loved.</p>
+      </div>
+      <div class="push-triple--top content--narrow">
         <h3><i class="fa fa-thumbs-up push-half--right muted"></i> Brad</h3>
-        <p class="muted milli">Blog coming soon...</p>
-      </div>
-      <div class="push-triple--top content--narrow">
-        <h3><i class="fa fa-thumbs-up muted push-half--right"></i> Jenny</h3>
-        <p class="muted milli">Blog coming soon...</p>
-      </div>
-      <div class="push-triple--top content--narrow">
-        <h3><i class="fa fa-thumbs-up push-half--right muted"></i> Sarah</h3>
         <p class="muted milli">Blog coming soon...</p>
       </div>
     </div>
