new brad photo, new brad quote.

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
         <p class="muted milli">Changing careers changed my life, and I have Jordan to thank for helping me get a job that I truly loved.</p>
       </div>
       <div class="push-triple--top content--narrow">
-        <h3><i class="fa fa-thumbs-up push-half--right muted"></i> Brad</h3>
-        <p class="muted milli">Blog coming soon...</p>
+        <h3><i class="fa fa-thumbs-up push-half--right muted"></i> <a href="https://www.linkedin.com/in/bradtonoff/">Brad</a>a></h3>
+        <p class="muted milli">Jordan has helped me with my resume,  salary negotiations, and we chat often about how best to navigate the politics of organizations.</p>
       </div>
     </div>
   </div>
