--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-118011861-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118011861-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'UA-118011861-1');
-</script>
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-118011861-1');
+  </script>
 
   <meta charset="UTF-8">
   <meta name="viewport" content="initial-scale=1, width=device-width">
@@ -20,108 +24,156 @@
   <script src="assets/js/common.js"></script>
   <title>Copilot: Your Dream Job is Calling, Pickup!</title>
 </head>
+
 <body>
 
-<section id="section-1">
-  <div class="col col--left"></div>
-  <div class="col col--right">
-    <div class="copy-box">
-      <div class="logo"><i class="fa fa-paper-plane"></i></div>
-      <h2>Looking for a job in <a href="https://unsplash.com/photos/9xXxAWMvk_A">SF</a>?<br />I can help.</h2>
-      <p class="muted">I helped <a href="https://www.linkedin.com/in/bradtonoff/">Brad</a> land his first marketing job, <a href="https://www.linkedin.com/in/jennykaypollock/">Jenny</a> transition into VR</a>, and <a href="https://www.linkedin.com/in/sarah-lubecki-a1a92942/">Sarah</a> get into Optimizely. Ready for your new thing? It requires tons of 👩‍💻 and a bit of 🎲, but soon you'll 🚀. </p>
-      <a href="mailto:sofake@gmail.com?subject=I'm%20ready%20for%20a%20job&body=Turing%20test.%20Change%20sofake%20above%20to%20jordankcrawford%20and%20we'll%20be%20off%20to%20the%20races!"><div class="button push-quad--top">🔥 It's Your Turn 🔥</div></a>
+  <section id="section-1">
+    <div class="col col--left"></div>
+    <div class="col col--right">
+      <div class="copy-box">
+        <div class="logo">
+          <i class="fa fa-paper-plane"></i>
+        </div>
+        <h2>Looking for a job in
+          <a href="https://unsplash.com/photos/9xXxAWMvk_A">SF</a>?
+          <br />I can help.</h2>
+        <p class="muted">I helped
+          <a href="https://www.linkedin.com/in/bradtonoff/">Brad</a> land his first marketing job,
+          <a href="https://www.linkedin.com/in/jennykaypollock/">Jenny</a> transition into VR</a>, and
+          <a href="https://www.linkedin.com/in/sarah-lubecki-a1a92942/">Sarah</a> get into Optimizely. Ready for your new thing? It requires tons of 👩‍💻 and a bit of 🎲, but soon you'll
+          🚀. </p>
+        <a href="mailto:sofake@gmail.com?subject=I'm%20ready%20for%20a%20job&body=Turing%20test.%20Change%20sofake%20above%20to%20jordankcrawford%20and%20we'll%20be%20off%20to%20the%20races!">
+          <div class="button push-quad--top">🔥 It's Your Turn 🔥</div>
+        </a>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<section id="section-2">
-  <div class="col col--left">
-    <i class="fa fa-check-circle"></i>
-  </div>
-  <div class="col col--right">
-    <div class="copy-box">
-      <div class="logo"><i class="fa fa-check"></i></div>
-      <h2>What I do</h2>
-      <p class="muted">Landing a great job is about reflection and grit. It's about making 100 edits to your resume and then 100 more, it's about gaining confidence to ask for $$$, and it's about <a href="https://medium.com/@inventitorfixit/want-that-job-youre-not-qualified-for-do-10x-c6fb221c22e3">doing 10x</a>.</p>
-      <div class="push-triple--top content--narrow">
-        <h3><i class="fa fa-check muted push-half--right"></i> Lift Your Confidence</h3>
-        <p class="muted milli">I’m not just anyone, and neither are you. I’ll show you how to shine. </p>
-      </div>
-      <div class="push-triple--top content--narrow">
-        <h3><i class="fa fa-check push-half--right muted"></i> Perfect Your Process</h3>
-        <p class="muted milli">You write your resume. Together we perfect it. Then, we'll strategize.</p>
-      </div>
-      <div class="push-triple--top content--narrow">
-        <h3><i class="fa fa-check push-half--right muted"></i> Find Your Career</h3>
-        <p class="muted milli">Finding what you love is an art, not a science. Let's paint together!</p>
+  <section id="section-2">
+    <div class="col col--left">
+      <i class="fa fa-check-circle"></i>
+    </div>
+    <div class="col col--right">
+      <div class="copy-box">
+        <div class="logo">
+          <i class="fa fa-check"></i>
+        </div>
+        <h2>What I do</h2>
+        <p class="muted">Landing a great job is about reflection and grit. It's about making 100 edits to your resume and then 100 more, it's
+          about gaining confidence to ask for $$$, and it's about
+          <a href="https://medium.com/@inventitorfixit/want-that-job-youre-not-qualified-for-do-10x-c6fb221c22e3">doing 10x</a>.</p>
+        <div class="push-triple--top content--narrow">
+          <h3>
+            <i class="fa fa-check push-half--right"></i> Lift Your Confidence</h3>
+          <p class="muted milli">I’m not just anyone, and neither are you. I’ll show you how to shine. </p>
+        </div>
+        <div class="push-triple--top content--narrow">
+          <h3>
+            <i class="fa fa-check push-half--right"></i> Perfect Your Process</h3>
+          <p class="muted milli">You write your resume. Together we perfect it. Then, we'll strategize.</p>
+        </div>
+        <div class="push-triple--top content--narrow">
+          <h3>
+            <i class="fa fa-check push-half--right"></i> Find Your Career</h3>
+          <p class="muted milli">Finding what you love is an art, not a science. Let's paint together!</p>
+        </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<section id="section-3">
-  <div class="col col--left stacked">
-    <div class="stacked__item" id="faith"></div>
-    <div class="stacked__item" id="sarah"></div>
-    <div class="stacked__item" id="brad"></div>
-  </div>
-  <div class="col col--right">
-    <div class="copy-box">
-      <div class="logo"><i class="fa fa-quote-left"></i></div>
-      <h2>Testimonials</h2>
-      <p class="muted">Don't take my word for it, take theirs...</p>
-      <div class="push-triple--top content--narrow">
-        <h3><i class="fa fa-thumbs-up push-half--right muted"></i> <a href="https://www.linkedin.com/in/faithstorey/">Faith</h3>
-        <p class="muted milli">Jordan is the tool you need to grow into the next level of your career. He has a resume template that has helped me land more interviews and contact with recruiters. If you are looking to get a job in SF, you should take advantage of his advice and years of experience.</p>
-      </div>
-      <div class="push-triple--top content--narrow">
-        <h3><i class="fa fa-thumbs-up muted push-half--right"></i> <a href="https://www.linkedin.com/in/sarah-lubecki-a1a92942/">Sarah</a></h3>
-        <p class="muted milli">Changing careers changed my life, and I have Jordan to thank for helping me get a job that I truly loved.</p>
-      </div>
-      <div class="push-triple--top content--narrow">
-        <h3><i class="fa fa-thumbs-up push-half--right muted"></i> <a href="https://www.linkedin.com/in/bradtonoff/">Brad</a>a></h3>
-        <p class="muted milli">Jordan has helped me with my resume,  salary negotiations, and we chat often about how best to navigate the politics of organizations.</p>
+  <section id="section-3">
+    <div class="col col--left stacked">
+      <div class="stacked__item" id="faith"></div>
+      <div class="stacked__item" id="sarah"></div>
+      <div class="stacked__item" id="brad"></div>
+    </div>
+    <div class="col col--right">
+      <div class="copy-box">
+        <div class="logo">
+          <i class="fa fa-quote-left"></i>
+        </div>
+        <h2>Testimonials</h2>
+        <p class="muted">Don't take my word for it, take theirs...</p>
+        <div class="push-triple--top content--narrow">
+          <h3>
+            <i class="fa fa-thumbs-up push-half--right"></i> Faith</h3>
+          <p class="muted milli">Jordan is the tool you need to grow into the next level of your career. He has a resume template that has helped
+            me land more interviews and contact with recruiters. If you are looking to get a job in SF, you should take advantage
+            of his advice and years of experience.</p>
+          <p class="muted milli">
+            <a href="https://www.linkedin.com/in/faithstorey/">Read Faith's story</a>
+          </p>
+        </div>
+        <div class="push-triple--top content--narrow">
+          <h3>
+            <i class="fa fa-thumbs-up push-half--right"></i> Sarah</h3>
+          <p class="muted milli">Changing careers changed my life, and I have Jordan to thank for helping me get a job that I truly loved.</p>
+          <p class="muted milli">
+            <a href="https://www.linkedin.com/in/sarah-lubecki-a1a92942/">Read Sarah's story</a>
+          </p>
+        </div>
+        <div class="push-triple--top content--narrow">
+          <h3>
+            <i class="fa fa-thumbs-up push-half--right"></i>
+            <a href="https://www.linkedin.com/in/bradtonoff/">Brad</a>
+          </h3>
+          <p class="muted milli">Jordan has helped me with my resume, salary negotiations, and we chat often about how best to navigate the politics of organizations.</p>
+          <p class="muted milli">
+            <a href="https://www.linkedin.com/in/bradtonoff/">Read Brad's story</a>
+          </p>
+        </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<section id="section-4">
-  <div class="col col--left">
-    <i class="fa fa-list"></i>
-  </div>
-  <div class="col col--right">
-    <div class="copy-box">
-      <div class="logo"><i class="fa fa-list"></i></div>
-      <h2>Pricing</h2>
-      <p class="muted">I call it barterware. You do some work for me and I'll do some work for you. But, you earn your keep by investing time in yourself and the process. You'll learn a lot, I promise.</p>
-      <div class="push-triple--top content--narrow">
-        <h3><i class="fa fa-check push-half--right muted"></i> Work or Be Fired</h3>
-        <p class="muted milli">I'll help you write and edit <a href="https://medium.com/@inventitorfixit/the-best-resume-template-d1c972e7b82c">the perfect resume</a>. If I see C- work, it's over.</p>
-      </div>
-      <div class="push-triple--top content--narrow">
-        <h3><i class="fa fa-check muted push-half--right"></i> Grit Wins</h3>
-        <p class="muted milli">"Hustle beats talent when talent doesn't hustle." Work hard, work often, work fast.</p>
-      </div>
-      <div class="push-triple--top content--narrow">
-        <h3><i class="fa fa-check push-half--right muted"></i> It's Forever</h3>
-        <p class="muted milli">It's not just about this job. It's about advice, mentorship, and a partnership.</p>
+  <section id="section-4">
+    <div class="col col--left">
+      <i class="fa fa-list"></i>
+    </div>
+    <div class="col col--right">
+      <div class="copy-box">
+        <div class="logo">
+          <i class="fa fa-list"></i>
+        </div>
+        <h2>Pricing</h2>
+        <p class="muted">I call it barterware. You do some work for me and I'll do some work for you. But, you earn your keep by investing
+          time in yourself and the process. You'll learn a lot, I promise.</p>
+        <div class="push-triple--top content--narrow">
+          <h3>
+            <i class="fa fa-check push-half--right"></i> Work or Be Fired</h3>
+          <p class="muted milli">I'll help you write and edit
+            <a href="https://medium.com/@inventitorfixit/the-best-resume-template-d1c972e7b82c">the perfect resume</a>. If I see C- work, it's over.</p>
+        </div>
+        <div class="push-triple--top content--narrow">
+          <h3>
+            <i class="fa fa-check push-half--right"></i> Grit Wins</h3>
+          <p class="muted milli">"Hustle beats talent when talent doesn't hustle." Work hard, work often, work fast.</p>
+        </div>
+        <div class="push-triple--top content--narrow">
+          <h3>
+            <i class="fa fa-check push-half--right"></i> It's Forever</h3>
+          <p class="muted milli">It's not just about this job. It's about advice, mentorship, and a partnership.</p>
+        </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<section id="section-5">
-  <div class="col col--left"></div>
-  <div class="col col--right">
-    <div class="copy-box">
-      <div class="logo"><i class="fa fa-envelope"></i></div>
-      <h2>Contact</h2>
-      <p class="muted">Ready? Set? Email! Or, <a href="https://www.linkedin.com/in/jordancrawford">LinkedIn</a>.</p>
-      <a href="mailto:sofake@gmail.com?subject=I'm%20ready%20for%20a%20job&body=Turing%20test.%20Change%20sofake%20above%20to%20jordankcrawford%20and%20we'll%20be%20off%20to%20the%20races!"><div class="button push-quad--top">[thisdomain]@gmail.com</div></a>
+  <section id="section-5">
+    <div class="col col--left"></div>
+    <div class="col col--right">
+      <div class="copy-box">
+        <div class="logo">
+          <i class="fa fa-envelope"></i>
+        </div>
+        <h2>Contact</h2>
+        <p class="muted">Ready? Set? Email! Or,
+          <a href="https://www.linkedin.com/in/jordancrawford">LinkedIn</a>.</p>
+<a class="button push-quad--top" href="&#99;&#111;&#112;&#105;&#108;&#111;&#116;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;">&#99;&#111;&#112;&#105;&#108;&#111;&#116;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</a>
+        </a>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
 </body>
+
 </html>
