--- a/index.html
+++ b/index.html
@@ -2,18 +2,16 @@
 <html lang="en">
 
 <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118011861-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-119015168-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
+  gtag('config', 'UA-119015168-1');
+</script>
 
-    gtag('config', 'UA-118011861-1');
-  </script>
 
   <meta charset="UTF-8">
   <meta name="viewport" content="initial-scale=1, width=device-width">
