Responsive YouTube video

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     <div class="copy-box">
       <div class="logo"><i class="fa fa-paper-plane"></i></div>
       <h2>Looking for a job in <a href="https://unsplash.com/photos/9xXxAWMvk_A">SF</a>? I can help.</h2>
+      <div class="video-responsive">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/mVqbzNeWzDE?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      </div>
       <p class="muted">I helped <a href="https://www.linkedin.com/in/bradtonoff/">Brad</a> land his first marketing job, <a href="https://www.linkedin.com/in/jennykaypollock/">Jenny</a> transition into VR</a>, and <a href="https://www.linkedin.com/in/sarah-lubecki-a1a92942/">Sarah</a> get into Optimizely. Ready for your new thing? It requires tons of 👩‍💻 and a bit of 🎲, but soon you'll 🚀. </p>
       <a href="mailto:sofake@gmail.com?subject=I'm%20ready%20for%20a%20job&body=Turing%20test.%20Change%20sofake%20above%20to%20jordankcrawford%20and%20we'll%20be%20off%20to%20the%20races!"><div class="button push-quad--top">🔥 It's Your Turn 🔥</div></a>
     </div>
